[gd_scene load_steps=3 format=3 uid="uid://ddl368sfmifvu"]

[ext_resource type="Script" uid="uid://dsmxsvsaco7xy" path="res://assets/scenes/Main.gd" id="1_npkpr"]
[ext_resource type="Texture2D" uid="uid://dj6ibikvkaorf" path="res://assets/art/placeholders/istockphoto-1289241322-612x612.jpg" id="2_xt100"]

[node name="Main" type="Node2D"]
script = ExtResource("1_npkpr")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(632, 360)
scale = Vector2(2.10458, 2.31056)
texture = ExtResource("2_xt100")

[node name="UI" type="CanvasLayer" parent="."]

[node name="ChatPanel" type="Panel" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -100.0
offset_right = 300.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="ChatLabel" type="Label" parent="UI/ChatPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -345.0
offset_top = 12.0
offset_right = 345.0
offset_bottom = 38.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 18
text = "Hi Chief! Name your village:"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="NameInput" type="LineEdit" parent="UI/ChatPanel"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -34.2813
offset_top = -15.5
offset_right = 34.2813
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2

[node name="OkButton" type="Button" parent="UI/ChatPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -18.0
offset_top = -40.0
offset_right = 18.0
offset_bottom = -9.0
grow_horizontal = 2
grow_vertical = 0
text = "OK!"

[node name="PlotSpawns" type="Node2D" parent="."]

[node name="SpawnPoint0" type="Marker2D" parent="PlotSpawns"]
z_index = 3
position = Vector2(640, 360)

[node name="SpawnPoint1" type="Marker2D" parent="PlotSpawns"]
position = Vector2(256, 416)

[node name="SpawnPoint2" type="Marker2D" parent="PlotSpawns"]
position = Vector2(648, 616)

[node name="SpawnPoint3" type="Marker2D" parent="PlotSpawns"]
position = Vector2(1016, 416)
